k8s/dev_local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecopsv1
  labels:
    name: devsecopsv1
